[project]
name = "graph-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-keyvault-secrets>=4.10.0",
    "azure-messaging-webpubsubservice>=1.3.0",
    "azure-mgmt-resource>=24.0.0",
    "dotenv>=0.9.9",
    "google-genai>=1.52.0",
    "mcp[cli]>=1.22.0",
    "mem0ai>=1.0.0",
    "sendgrid>=6.12.5",
    "google-cloud-aiplatform>=1.26.0",
    "openai>=1.52.0",
    "supermemory>=1.0.0"
]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "pyright>=1.1.286",
    "ruff>=0.0.266"
]